logs/Slang/generated/hdlconv/hdlconvertor_p229.sv.log
name: hdlconvertor_p229
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p229.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p229.sv:2:1: error: language feature not yet supported
fork
^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p229.sv:7:1: error: language feature not yet supported
disable fork;
^~~~~~~~~~~~~
